fix swagger 3
